@@ -1,3 +1,8 @@
+2008-07-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gvfs.c:
+	* gmount.c: Documentation fixes
+
 2008-07-19  Matthias Clasen  <mclasen@redhat.com>
 
 	543504 – crash in Epiphany Web Browser: Opening local file
